# nx-boss-rs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.yaml  config.yaml  defaults.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: probe_sides.py  rev.py  test_scan.sh
src/: batch.rs  build_info.rs  config.rs  main.rs  pdf.rs  retention.rs  state.rs  translations.rs
src/nx_boss/: __main__.py  app.py  batch.py  config.py
src/routes/: batch.rs  e2e_test.rs  image.rs  jobs.rs  mod.rs  scanner.rs  scans.rs  settings.rs  ui.rs
templates/: base.html  dashboard.html  jobs_form.html  jobs_list.html  scanner_status.html  scans_detail.html  scans_list.html  settings.html
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_batch.py  test_config.py
