[package]
name = "nx-boss-rs"
version = "0.1.0"
edition = "2024"
description = "Compatible server for PaperStream NX Manager"

[[bin]]
name = "nx-boss-rs"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "v6"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
lopdf = "0.40"
tar = "0.4"
zstd = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = "0.12"
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
axum-test = "20"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
